# stewart_platform

./: .gitignore  CMakeLists.txt  README.md  package.xml
animation/: animation1.txt  animation4.txt  blender_animation_to_txt.py
config/: my_controllers.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robot/lib/robot/: animation_player.py  servo_angle_calculator.py
install/robot/share/robot/: local_setup.sh  package.sh
install/robot/share/robot/launch/: end_effector.launch.py  robot.launch.py  (+1 more)
launch/: display_confiv.rviz  end_effector.launch.py  gazebo_robot.launch.py  robot.launch.py  stewart_platform.launch.py  urdf.launch.py
log/: latest_build
microcontroller/: basic_arduino_code_1.ino.ino
robot/animation/: animation1.txt  blender_animation_to_txt.py
robot/launch/: end_effector.launch.py
robot/scripts/: animation_player.py  servo_angle_calculator.py
robot/sketch_apr23a/: sketch_apr23a.ino
robot/urdf/: robot.urdf.xacro  robot_arms.xacro
scripts/: animation_player.py  constant_end_effector_publisher.py  end_effector_tf.py  fixed_frame_broadcaster.py  gui.py  gui2.py  inverse_kinematics.py  inverse_kinematics_with_long_arms.py  serial_communication.py  servo_angle_calculator.py  servo_angle_gui.py  test.py
scripts/sim/: gazebo_angle_gui.py  gazebo_servo_angle_calculator.py  ign_gazebo_sim.py  sim.py
sketch_apr23a/: sketch_apr23a.ino
urdf/: gazebo_world  robot.urdf  robot.urdf.xacro  robot_arms.xacro  robot_arms_2.xacro  robot_base.xacro  robot_base_2.xacro  robot_gazebo.xacro  robot_long_arms.xacro  ros2_control.xacro  short_and_long_arms.xacro  simplified_base_model.stl
(+4 files in other folders)
