<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stewart_platform</name>
  <version>0.0.0</version>
  <description>stewart_platform is a ROS2 Package for visualizing and controlling stewart platforms. Specifically stewart platforms 
  where each arm is made up of two links (not ones with linear actuators)</description>
  <maintainer email="thejdrobotics@gmail.com">James Patten</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
